versioned_docs/version-2.0/reusables/errors/OCE012.mdx
import ErrorDisplay from '@site/src/components/ErrorDisplay.jsx';
import SandboxValidationAdmonition from '@site/versioned_docs/version-2.0/reusables/sandbox-validation-admonition.mdx';
import BirthDateOverSsn4Admonition from '@site/versioned_docs/version-2.0/reusables/birth-date-over-ssn4-admonition.mdx'; 

<ErrorDisplay 
  message='BirthDate mismatch." | "SSN4 mismatch." | "BirthDate mismatch and SSN4 mismatch.' 
  description=''
  riskSignals='true'
  integrationType=''
  whenThisIsReturned='When the inputted birth date or SSN4 (or both) does not match Verified records.' 
  howToHandle='Prompt the user to try again or confirm that the value they provided is accurate. If they confirm, fall back to a manual signup flow.'
  youShouldNeverGetThisError=''
>
  ##### `OCE012`
</ErrorDisplay>
<SandboxValidationAdmonition />

<BirthDateOverSsn4Admonition/>

```typescript title="Example: Birth Date Only"
{
    ...
    "message": "BirthDate mismatch."
    ...
    "data": {
        "errorCode": "OCE012",
        ...
    }
}
```

```typescript title="Example: SSN4 Only"
{
    ...
    "message": "SSN4 mismatch."
    ...
    "data": {
        "errorCode": "OCE012",
        ...
    }
}
```

```typescript title="Example: Both Birth Date and SSN4"
{
    ...
    "message": "BirthDate mismatch and SSN4 mismatch."
    ...
    "data": {
        "errorCode": "OCE012",
        ...
    }
}
```